add filtering to resource
